SERVER-31806 do not invariant on the error status in makeNoopWriteIfNeeded